--- a/styles.css
+++ b/styles.css
@@ -881,8 +881,9 @@ nav .wrapper {
 
 .footer-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   color: var(--white);
+  justify-content: space-between;
 }
 
 .footer-center a:link,
@@ -1337,7 +1338,7 @@ th:last-child {
   flex-wrap: wrap;
   color: #f1f1f1;
   justify-content: space-between;
-  padding: 30px;
+  padding: 20px 0px;
 }
 
 .footer .social-média{
